--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-chrono": "^1.12.1",
     "react-countdown-circle-timer": "^2.5.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
