--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^10.0.0",
     "gulp": "^4.0.2",
     "react": "^17.0.2",
     "react-chrono": "^1.12.1",
